@@ -1465,8 +1465,11 @@ int ntfs_link(ntfs_inode *ni, ntfs_inode *dir_ni, ntfschar *name, u8 name_len)
 			le16_to_cpu(dir_ni->mrec->sequence_number));
 	fn->file_name_length = name_len;
 	fn->file_name_type = FILE_NAME_POSIX;
+	fn->file_attributes = ni->flags;
 	if (ni->mrec->flags & MFT_RECORD_IS_DIRECTORY)
-		fn->file_attributes = FILE_ATTR_DUP_FILE_NAME_INDEX_PRESENT;
+		fn->file_attributes |= FILE_ATTR_DUP_FILE_NAME_INDEX_PRESENT;
+	fn->allocated_size = cpu_to_sle64(ni->allocated_size);
+	fn->data_size = cpu_to_sle64(ni->data_size);
 	fn->creation_time = utc2ntfs(ni->creation_time);
 	fn->last_data_change_time = utc2ntfs(ni->last_data_change_time);
 	fn->last_mft_change_time = utc2ntfs(ni->last_mft_change_time);
@@ -1502,15 +1505,6 @@ int ntfs_link(ntfs_inode *ni, ntfs_inode *dir_ni, ntfschar *name, u8 name_len)
 	/* Increment hard links count. */
 	ni->mrec->link_count = cpu_to_le16(le16_to_cpu(
 			ni->mrec->link_count) + 1);
-	/*
-	 * Do not set attributes and file size, instead of this mark filenames
-	 * dirty to force attribute and size update during sync.
-	 * NOTE: File size may will be not updated and not all attributes will
-	 * be set, but it is acceptable since windows driver does not update
-	 * all file names when one of the hard links changed.
-	 * FIXME: It will be nice to update them all.
-	 */
-	NInoFileNameSetDirty(ni);
 	/* Done! */
 	ntfs_inode_mark_dirty(ni);
 	free(fn);
